--- a/summary-livescore-and-audio.ipynb
+++ b/summary-livescore-and-audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -58,6 +58,7 @@
     "\n",
     "include_goals = True;\n",
     "include_fouls = True;\n",
+    "include_others = True; # shoot on goal, build-up play, etc\n",
     "\n",
     "# Get subclip for second half\n",
     "# clipsecond = VideoFileClip(\"soccer.mp4\").subclip(\"01:17:00\")"
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -188,14 +189,31 @@
       "Audio: peaks times\n",
       "[  18  119  130  135  139  145  150  162  167  169  174  259  288  290  294\n",
       "  296  302  310  321  356  411  427  534  542  546  548  550  553  556  653\n",
-      "  656  660  709  732  772  776  780  783  785  788  791  793  796  953  972\n",
-      " 1083 1387 1390 1456 1524 1531 1542 1690 1738 1740 1888 2018 2072 2081 2085\n",
-      " 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241 2243 2250 2252 2460 2516\n",
-      " 2518 2526 2531 2533 2536 2539 2542 2705 2708 2736 2739 2826 2900 2905 2929]\n",
+      "  656  660  709  732  772  776  780  783  785  788  791  793  796  831  953\n",
+      "  972 1083 1387 1390 1456 1524 1531 1542 1690 1738 1740 1888 2018 2072 2081\n",
+      " 2085 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241 2243 2250 2252 2460\n",
+      " 2516 2518 2526 2531 2533 2536 2539 2542 2705 2708 2736 2739 2826 2900 2905\n",
+      " 2929]\n",
       "Livescore: Goals times\n",
       "[ 320  800 2660]\n",
       "Livescore: Fouls times\n",
-      "[1160 1460 2420]\n"
+      "[1160 1460 2420]\n",
+      "Merge Audio with Livescore - Goals\n",
+      "[  18  119  130  135  139  145  150  162  167  169  174  259  288  290  294\n",
+      "  296  302  310  320  321  356  411  427  534  542  546  548  550  553  556\n",
+      "  653  656  660  709  732  772  776  780  783  785  788  791  793  796  800\n",
+      "  831  953  972 1083 1387 1390 1456 1524 1531 1542 1690 1738 1740 1888 2018\n",
+      " 2072 2081 2085 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241 2243 2250\n",
+      " 2252 2460 2516 2518 2526 2531 2533 2536 2539 2542 2660 2705 2708 2736 2739\n",
+      " 2826 2900 2905 2929]\n",
+      "Merge Audio with Livescore - Fouls\n",
+      "[  18  119  130  135  139  145  150  162  167  169  174  259  288  290  294\n",
+      "  296  302  310  320  321  356  411  427  534  542  546  548  550  553  556\n",
+      "  653  656  660  709  732  772  776  780  783  785  788  791  793  796  800\n",
+      "  831  953  972 1083 1160 1387 1390 1456 1460 1524 1531 1542 1690 1738 1740\n",
+      " 1888 2018 2072 2081 2085 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241\n",
+      " 2243 2250 2252 2420 2460 2516 2518 2526 2531 2533 2536 2539 2542 2660 2705\n",
+      " 2708 2736 2739 2826 2900 2905 2929]\n"
      ]
     }
    ],
@@ -214,12 +232,22 @@
     "fouls_times = np.array([1200, 1500, 2460])\n",
     "# Correct the livescore offser\n",
     "fouls_times = fouls_times + livescore_offset \n",
-    "print fouls_times\n"
+    "print fouls_times\n",
+    "\n",
+    "if include_goals:\n",
+    "    print \"Merge Audio with Livescore - Goals\"\n",
+    "    peaks_times = np.sort(np.append(peaks_times,goals_times))\n",
+    "    print peaks_times\n",
+    "    \n",
+    "if include_fouls:\n",
+    "    print \"Merge Audio with Livescore - Fouls\"\n",
+    "    peaks_times = np.sort(np.append(peaks_times,fouls_times))\n",
+    "    print peaks_times\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -228,14 +256,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Audio: final grouped\n",
-      "[18, 167, 310, 427, 546, 653, 785, 972, 1083, 1390, 1456, 1542, 1738, 1888, 2124, 2223, 2518, 2736, 2826, 2900]\n",
-      "Merge Audio with Livescore - Goals\n",
-      "[  18  167  310  320  427  546  653  785  800  972 1083 1390 1456 1542 1738\n",
-      " 1888 2124 2223 2518 2660 2736 2826 2900]\n",
-      "Merge Audio with Livescore - Fouls\n",
-      "[  18  167  310  320  427  546  653  785  800  972 1083 1160 1390 1456 1460\n",
-      " 1542 1738 1888 2124 2223 2420 2518 2660 2736 2826 2900]\n"
+      "Grouped Frames\n",
+      "[18, 167, 320, 427, 546, 653, 800, 972, 1083, 1160, 1390, 1460, 1542, 1738, 1888, 2124, 2223, 2420, 2518, 2660, 2736, 2826, 2900]\n"
      ]
     }
    ],
@@ -251,29 +273,22 @@
     "\n",
     "final_times=[peaks_times[0]]\n",
     "for t in peaks_times:\n",
+    "    \n",
+    "        \n",
     "    if (t - final_times[-1]) < 60:\n",
-    "        if vol[t] > vol[final_times[-1]]:\n",
-    "            final_times[-1] = t\n",
+    "        if t not in goals_times or t not in fouls_times: # Livescore events as ground truth\n",
+    "            if vol[t] > vol[final_times[-1]]:\n",
+    "                final_times[-1] = t\n",
     "    else:\n",
     "        final_times.append(t)\n",
     "        \n",
-    "print \"Audio: final grouped\"\n",
-    "print final_times\n",
-    "\n",
-    "if include_goals:\n",
-    "    print \"Merge Audio with Livescore - Goals\"\n",
-    "    final_times = np.sort(np.append(final_times,goals_times))\n",
-    "    print final_times\n",
-    "    \n",
-    "if include_fouls:\n",
-    "    print \"Merge Audio with Livescore - Fouls\"\n",
-    "    final_times = np.sort(np.append(final_times,fouls_times))\n",
-    "    print final_times\n"
+    "print \"Grouped Frames\"\n",
+    "print final_times\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -290,7 +305,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 1348/59337 [00:05<03:42, 260.19it/s]"
+      "100%|██████████| 15215/15215 [00:50<00:00, 300.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] Writing video soccer-summary-livescore-and-audio.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 20700/20701 [05:43<00:00, 60.19it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: soccer-summary-livescore-and-audio.mp4 \n",
+      "\n"
      ]
     }
    ],
@@ -298,8 +337,8 @@
     "# TODO: make it dynamic using audio approach\n",
     "foi_window = 15;\n",
     "\n",
-    "final = concatenate([clipfull.subclip(max(t-foi_window,0),min(t+foi_window, clipfull.duration)) for t in peaks_times])\n",
-    "final.to_videofile(\"soccer-summary-livescore-and-audio.mp4\") # low quality is the default"
+    "final = concatenate([clipfull.subclip(max(t-foi_window,0),min(t+foi_window, clipfull.duration)) for i,t in final_times])\n",
+    "final.to_videofile(\"soccer-summary-livescore-and-audio.mp4\")"
    ]
   },
   {
