Updated: Implement dynamic window frame of interest

--- a/summary-livescore-and-audio.ipynb
+++ b/summary-livescore-and-audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 168,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 169,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
    "source": [
     "# clipfull = VideoFileClip(\"soccer.mp4\")\n",
     "clipfull = VideoFileClip(\"soccer-subclip.mp4\")\n",
-    "offset = 20 #the real kick of / start of the match\n",
+    "offset = 20 #the real kick off / start of the match\n",
     "livescore_offset = -60 + offset; # livescore use ceiling for the event's timestamp\n",
     "\n",
     "include_goals = True;\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 171,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 163,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 164,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
@@ -189,11 +189,10 @@
       "Audio: peaks times\n",
       "[  18  119  130  135  139  145  150  162  167  169  174  259  288  290  294\n",
       "  296  302  310  321  356  411  427  534  542  546  548  550  553  556  653\n",
-      "  656  660  709  732  772  776  780  783  785  788  791  793  796  831  953\n",
-      "  972 1083 1387 1390 1456 1524 1531 1542 1690 1738 1740 1888 2018 2072 2081\n",
-      " 2085 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241 2243 2250 2252 2460\n",
-      " 2516 2518 2526 2531 2533 2536 2539 2542 2705 2708 2736 2739 2826 2900 2905\n",
-      " 2929]\n",
+      "  656  660  709  732  772  776  780  783  785  788  791  793  796  953  972\n",
+      " 1083 1387 1390 1456 1524 1531 1542 1690 1738 1740 1888 2018 2072 2081 2085\n",
+      " 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241 2243 2250 2252 2460 2516\n",
+      " 2518 2526 2531 2533 2536 2539 2542 2705 2708 2736 2739 2826 2900 2905 2929]\n",
       "Livescore: Goals times\n",
       "[ 320  800 2660]\n",
       "Livescore: Fouls times\n",
@@ -202,18 +201,18 @@
       "[  18  119  130  135  139  145  150  162  167  169  174  259  288  290  294\n",
       "  296  302  310  320  321  356  411  427  534  542  546  548  550  553  556\n",
       "  653  656  660  709  732  772  776  780  783  785  788  791  793  796  800\n",
-      "  831  953  972 1083 1387 1390 1456 1524 1531 1542 1690 1738 1740 1888 2018\n",
-      " 2072 2081 2085 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241 2243 2250\n",
-      " 2252 2460 2516 2518 2526 2531 2533 2536 2539 2542 2660 2705 2708 2736 2739\n",
-      " 2826 2900 2905 2929]\n",
+      "  953  972 1083 1387 1390 1456 1524 1531 1542 1690 1738 1740 1888 2018 2072\n",
+      " 2081 2085 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241 2243 2250 2252\n",
+      " 2460 2516 2518 2526 2531 2533 2536 2539 2542 2660 2705 2708 2736 2739 2826\n",
+      " 2900 2905 2929]\n",
       "Merge Audio with Livescore - Fouls\n",
       "[  18  119  130  135  139  145  150  162  167  169  174  259  288  290  294\n",
       "  296  302  310  320  321  356  411  427  534  542  546  548  550  553  556\n",
       "  653  656  660  709  732  772  776  780  783  785  788  791  793  796  800\n",
-      "  831  953  972 1083 1160 1387 1390 1456 1460 1524 1531 1542 1690 1738 1740\n",
-      " 1888 2018 2072 2081 2085 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241\n",
-      " 2243 2250 2252 2420 2460 2516 2518 2526 2531 2533 2536 2539 2542 2660 2705\n",
-      " 2708 2736 2739 2826 2900 2905 2929]\n"
+      "  953  972 1083 1160 1387 1390 1456 1460 1524 1531 1542 1690 1738 1740 1888\n",
+      " 2018 2072 2081 2085 2121 2124 2129 2133 2138 2141 2223 2225 2227 2241 2243\n",
+      " 2250 2252 2420 2460 2516 2518 2526 2531 2533 2536 2539 2542 2660 2705 2708\n",
+      " 2736 2739 2826 2900 2905 2929]\n"
      ]
     }
    ],
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +256,7 @@
      "output_type": "stream",
      "text": [
       "Grouped Frames\n",
-      "[18, 167, 320, 427, 546, 653, 800, 972, 1083, 1160, 1390, 1460, 1542, 1738, 1888, 2124, 2223, 2420, 2518, 2660, 2736, 2826, 2900]\n"
+      "[18, 167, 310, 427, 546, 653, 785, 972, 1083, 1160, 1390, 1456, 1542, 1738, 1888, 2124, 2223, 2518, 2736, 2826, 2900]\n"
      ]
     }
    ],
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false
    },
@@ -305,7 +304,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15215/15215 [00:50<00:00, 300.61it/s]\n"
+      "100%|██████████| 17376/17376 [00:58<00:00, 295.78it/s]"
      ]
     },
     {
@@ -320,7 +319,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 20700/20701 [05:43<00:00, 60.19it/s]\n"
+      "\n",
+      "100%|█████████▉| 23640/23641 [06:34<00:00, 59.87it/s]\n"
      ]
     },
     {
@@ -334,12 +334,51 @@
     }
    ],
    "source": [
-    "# TODO: make it dynamic using audio approach\n",
-    "foi_window = 15;\n",
+    "# Static Frame-of-Interest (FOI)\n",
+    "# foi_window = 15;\n",
+    "# final = concatenate([clipfull.subclip(max(t-foi_window,0),min(t+foi_window, clipfull.duration)) for t in final_times])\n",
     "\n",
-    "final = concatenate([clipfull.subclip(max(t-foi_window,0),min(t+foi_window, clipfull.duration)) for i,t in final_times])\n",
+    "# Dynamic FOI\n",
+    "foi_search_limit = 5; # times of search\n",
+    "foi_search_time = 5; # seconds\n",
+    "    \n",
+    "def findDynamicFOI(t): \n",
+    "    foi_window_start = 0;\n",
+    "    foi_window_end = 0;\n",
+    "    \n",
+    "    for i in range(1, foi_search_limit):\n",
+    "#         print t\n",
+    "#         print vol[t-foi_search_time * i]\n",
+    "#         print vol[t] * 0.5\n",
+    "\n",
+    "        if(vol[t - foi_search_time * i] >= vol[t] * 0.6):\n",
+    "            foi_window_start = foi_window_start + foi_search_time\n",
+    "#             print \"start\"\n",
+    "#             print foi_window_start\n",
+    "            \n",
+    "        if(vol[t + foi_search_time * i] >= vol[t] * 0.6):\n",
+    "            foi_window_end = foi_window_end + foi_search_time\n",
+    "#             print \"end\"\n",
+    "#             print foi_window_end\n",
+    "    return [t-foi_window_start, t+foi_window_end]\n",
+    "\n",
+    "# Assigning dynamic FOI window\n",
+    "foi_windows = []\n",
+    "for t in final_times:\n",
+    "    foi_windows.append(findDynamicFOI(t))\n",
+    "    \n",
+    "final = concatenate([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)) for fw in foi_windows])\n",
     "final.to_videofile(\"soccer-summary-livescore-and-audio.mp4\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
