Updated: Merge adjacent dynamic FOI window

--- a/summary-livescore-and-audio.ipynb
+++ b/summary-livescore-and-audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +256,7 @@
      "output_type": "stream",
      "text": [
       "Grouped Frames\n",
-      "[18, 167, 310, 427, 546, 653, 785, 972, 1083, 1160, 1390, 1456, 1542, 1738, 1888, 2124, 2223, 2518, 2736, 2826, 2900]\n"
+      "[18, 167, 310, 321, 427, 546, 653, 785, 800, 972, 1083, 1160, 1390, 1456, 1460, 1542, 1738, 1888, 2124, 2223, 2518, 2736, 2826, 2900]\n"
      ]
     }
    ],
@@ -273,21 +273,20 @@
     "final_times=[peaks_times[0]]\n",
     "for t in peaks_times:\n",
     "    \n",
-    "        \n",
-    "    if (t - final_times[-1]) < 60:\n",
-    "        if t not in goals_times or t not in fouls_times: # Livescore events as ground truth\n",
-    "            if vol[t] > vol[final_times[-1]]:\n",
-    "                final_times[-1] = t\n",
-    "    else:\n",
+    "    # Livescore events as ground truth, trim/concat others        \n",
+    "    if not (t in goals_times or t in fouls_times) and ((t - final_times[-1]) < 60):\n",
+    "        if vol[t] > vol[final_times[-1]]:\n",
+    "            final_times[-1] = t\n",
+    "    else:   \n",
     "        final_times.append(t)\n",
-    "        \n",
+    "\n",
     "print \"Grouped Frames\"\n",
     "print final_times\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -296,6 +295,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[-2, 38], [147, 182], [290, 330], [301, 341], [407, 442], [526, 561], [633, 673], [765, 805], [780, 820], [952, 992], [1063, 1103], [1140, 1180], [1370, 1410], [1436, 1476], [1440, 1480], [1522, 1562], [1718, 1758], [1873, 1908], [2114, 2144], [2203, 2238], [2498, 2533], [2721, 2751], [2806, 2846], [2880, 2920]]\n",
+      "[[-2, 38], [147, 182], [290, 341], [407, 442], [526, 561], [633, 673], [765, 820], [952, 992], [1063, 1103], [1140, 1180], [1370, 1410], [1436, 1480], [1522, 1562], [1718, 1758], [1873, 1908], [2114, 2144], [2203, 2238], [2498, 2533], [2721, 2751], [2806, 2846], [2880, 2920]]\n",
       "[MoviePy] >>>> Building video soccer-summary-livescore-and-audio.mp4\n",
       "[MoviePy] Writing audio in soccer-summary-livescore-and-audioTEMP_MPY_wvf_snd.mp3\n"
      ]
@@ -304,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17376/17376 [00:58<00:00, 295.78it/s]"
+      "100%|██████████| 18037/18037 [01:07<00:00, 268.88it/s]\n"
      ]
     },
     {
@@ -319,8 +320,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "100%|█████████▉| 23640/23641 [06:34<00:00, 59.87it/s]\n"
+      "100%|█████████▉| 24540/24541 [06:35<00:00, 62.07it/s]\n"
      ]
     },
     {
@@ -356,7 +356,7 @@
     "#             print \"start\"\n",
     "#             print foi_window_start\n",
     "            \n",
-    "        if(vol[t + foi_search_time * i] >= vol[t] * 0.6):\n",
+    "        if((t + foi_search_time * i <= len(vol) ) and (vol[t + foi_search_time * i] >= vol[t] * 0.6)):\n",
     "            foi_window_end = foi_window_end + foi_search_time\n",
     "#             print \"end\"\n",
     "#             print foi_window_end\n",
@@ -366,8 +366,28 @@
     "foi_windows = []\n",
     "for t in final_times:\n",
     "    foi_windows.append(findDynamicFOI(t))\n",
+    "\n",
+    "foi_windows_grouped=[foi_windows[0]]\n",
+    "\n",
+    "print foi_windows\n",
+    "\n",
+    "# Merge window if necessary\n",
+    "for fw in foi_windows:\n",
     "    \n",
-    "final = concatenate([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)) for fw in foi_windows])\n",
+    "    if fw[0] > foi_windows_grouped[-1][1]:\n",
+    "        foi_windows_grouped.append(fw)\n",
+    "    else:\n",
+    "        foi_windows_grouped[-1][1] = fw[1]\n",
+    "    \n",
+    "print foi_windows_grouped     \n",
+    "        \n",
+    "#         print fw[0]\n",
+    "#         print foi_windows_grouped[-1][1]\n",
+    "#         print fw\n",
+    "#         print \"---\"    \n",
+    "\n",
+    "#print foi_windows    \n",
+    "final = concatenate([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)) for fw in foi_windows_grouped])\n",
     "final.to_videofile(\"soccer-summary-livescore-and-audio.mp4\")"
    ]
   },
