--- a/summary-livescore-and-audio.ipynb
+++ b/summary-livescore-and-audio.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -156,26 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "\n",
-    "t = [i for i in range (0,len(volumes))]\n",
+    "# t = [i for i in range (0,len(volumes))]\n",
     "\n",
-    "plt.plot(t,vol)\n",
-    "plt.ylabel(\"Amplitude\")\n",
-    "plt.xlabel(\"Time\")\n",
-    "plt.title(\"Audio signal for original video\")\n",
-    "plt.show()"
+    "# plt.plot(t,vol)\n",
+    "# plt.ylabel(\"Amplitude\")\n",
+    "# plt.xlabel(\"Time\")\n",
+    "# plt.title(\"Audio signal for original video\")\n",
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -203,8 +203,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Peak Detection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -248,8 +255,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Livescore Event"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -309,6 +323,7 @@
     "\n",
     "print \"Livescore: Goals times\"\n",
     "goals_times = np.array([360, 840, 2700])\n",
+    "goals_text = ['ARG - Angel Di Maria', 'ARG - Ever Banega', 'CHI - Jose Fuenzalida']\n",
     "\n",
     "# For all livescore goals\n",
     "goals = np.array([])\n",
@@ -370,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -505,8 +520,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine Audio based with Livescore"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -573,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -602,8 +624,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Dynamic window of FOI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -642,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -686,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -701,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -751,8 +780,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write summary video"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# final = concatenate([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)) for fw in foi_windows_sort])\n",
+    "# final.to_videofile(\"soccer-final95a.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -761,20 +809,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[MoviePy] >>>> Building video soccer-final95a.mp4\n",
-      "[MoviePy] Writing audio in soccer-final95aTEMP_MPY_wvf_snd.mp3\n",
-      "[MoviePy] Done.\n",
-      "[MoviePy] Writing video soccer-final95a.mp4\n",
-      "[MoviePy] Done.\n",
-      "[MoviePy] >>>> Video ready: soccer-final95a.mp4 \n",
-      "\n"
+      "C:\\Program Files\\ImageMagick-6.9.4-Q16\\convert.exe\n",
+      "C:\\Users\\sukmawicaksana\\AppData\\Local\\imageio\\ffmpeg\\ffmpeg.win32.exe\n"
      ]
     }
    ],
    "source": [
-    "final = concatenate([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)) for fw in foi_windows_sort])\n",
-    "final.to_videofile(\"soccer-final95a.mp4\")"
+    "# Change setting imagemick for Windows user\n",
+    "import moviepy.config as cf\n",
+    "cf.change_settings({\"IMAGEMAGICK_BINARY\": \"C:\\Program Files\\ImageMagick-6.9.4-Q16\\convert.exe\"})\n",
+    "print( cf.get_setting(\"IMAGEMAGICK_BINARY\") )  # prints the current setting\n",
+    "print( cf.get_setting(\"FFMPEG_BINARY\") )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[MoviePy] This command returned an error !"
+     ]
+    },
+    {
+     "ename": "IOError",
+     "evalue": "MoviePy Error: creation of None failed because of the following error:\n\nconvert.exe: no images defined `PNG32:c:\\users\\sukmaw~1\\appdata\\local\\temp\\tmpvaykwv.png' @ error/convert.c/ConvertImageCommand/3257.\r\n.\n\n.This error can be due to the fact that ImageMagick is not installed on your computer, or (for Windows users) that you didn't specify the path to the ImageMagick binary in file conf.py, or.that the path you specified is incorrect",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-31-42a011d71427>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m                  .set_duration(10) )\n\u001b[0;32m      9\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m             txt_clip = ( TextClip(\"\",fontsize=70,color='white')\n\u001b[0m\u001b[0;32m     11\u001b[0m                  \u001b[1;33m.\u001b[0m\u001b[0mset_position\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'center'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m                  .set_duration(10) )\n",
+      "\u001b[1;32mc:\\users\\sukmawicaksana\\anaconda2\\envs\\cs4065\\lib\\site-packages\\moviepy-0.2.2.11-py2.7.egg\\moviepy\\video\\VideoClip.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, txt, filename, size, color, bg_color, fontsize, font, stroke_color, stroke_width, method, kerning, align, interline, tempfilename, temptxt, transparent, remove_temp, print_cmd)\u001b[0m\n\u001b[0;32m   1143\u001b[0m                     \u001b[1;34m\"path to the ImageMagick binary in file conf.py, or.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1144\u001b[0m                     \"that the path you specified is incorrect\" ))\n\u001b[1;32m-> 1145\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1146\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1147\u001b[0m         \u001b[0mImageClip\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtempfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtransparent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtransparent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIOError\u001b[0m: MoviePy Error: creation of None failed because of the following error:\n\nconvert.exe: no images defined `PNG32:c:\\users\\sukmaw~1\\appdata\\local\\temp\\tmpvaykwv.png' @ error/convert.c/ConvertImageCommand/3257.\r\n.\n\n.This error can be due to the fact that ImageMagick is not installed on your computer, or (for Windows users) that you didn't specify the path to the ImageMagick binary in file conf.py, or.that the path you specified is incorrect"
+     ]
+    }
+   ],
+   "source": [
+    "final2 = concatenate([clipfull.subclip( max(fw[0],0),min(fw[1], clipfull.duration) ) for fw in foi_windows_sort])\n",
+    "\n",
+    "for fw in foi_windows_sort:\n",
+    "    for pair in goals_pair: # [[303, 341], [780, 812], [2660, 2695]]\n",
+    "        if fw == pair :\n",
+    "            txt_clip = ( TextClip(goals_text[goals_pair.index(pair)],fontsize=70,color='white')\n",
+    "                 .set_position('center')\n",
+    "                 .set_duration(10) )\n",
+    "        else:\n",
+    "            txt_clip = ( TextClip(\"\",fontsize=70,color='white')\n",
+    "                 .set_position('center')\n",
+    "                 .set_duration(10) )\n",
+    "            \n",
+    "    final2 = concatenate(CompositeVideoClip([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)), txt_clip]))\n",
+    "    \n",
+    "final2.to_videofile(\"soccer-final95text.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
