--- a/summary-livescore-and-audio.ipynb
+++ b/summary-livescore-and-audio.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -538,9 +538,9 @@
      "output_type": "stream",
      "text": [
       "Filter peaks_times with Livescore - Goals\n",
-      "843\n",
+      "45\n",
       "Filter peaks_times with Livescore - Fouls\n",
-      "786\n",
+      "45\n",
       "[ 110  116  121  125  143  146  271  392  406  408  415  452  491  516  528\n",
       "  532  600  675  753  766  769  772  774 1360 1719 1926 2040 2053 2099 2102\n",
       " 2104 2114 2118 2122 2200 2221 2231 2498 2513 2518 2520 2718 2720 2881 2910]\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -624,6 +624,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.08067845  0.0804749   0.08172089  0.08527316  0.07783964  0.08650401\n",
+      "  0.0747871   0.07466107  0.08563442  0.07452692  0.07872328  0.07550742\n",
+      "  0.07939651  0.07990132  0.08059563  0.08242886  0.08033879  0.07701026]\n",
+      "[516, 753, 392, 2498, 271, 2881]\n",
+      "[ 0.08650401  0.08563442  0.08527316  0.08242886  0.08172089  0.07701026]\n",
+      "[ 271  392  516  753 2498 2881]\n",
+      "[ 0.08172089  0.08527316  0.08650401  0.08563442  0.08242886  0.07701026]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "# choose number of serendipity\n",
+    "serendipitySize = 5\n",
+    "\n",
+    "print vol[final_times]\n",
+    "\n",
+    "chosen_times = []\n",
+    "\n",
+    "for v in heapq.nlargest(serendipitySize, vol[final_times]):\n",
+    "    chosen_times.append(np.where(vol == v)[0][0])\n",
+    "\n",
+    "chosen_times.append(2881)\n",
+    "\n",
+    "# Check resulting peaks and volumes\n",
+    "print chosen_times\n",
+    "print vol[chosen_times]\n",
+    "\n",
+    "chosen_times = np.sort(chosen_times)\n",
+    "\n",
+    "# Check resulting peaks and volumes after sort\n",
+    "print chosen_times\n",
+    "print vol[chosen_times]\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -632,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -671,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -715,22 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Assigning dynamic FOI window\n",
-    "for t in final_times:\n",
-    "    foi_windows.append(findDynamicFOI2(t))\n",
-    "\n",
-    "# print foi_windows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -739,7 +771,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[101, 131], [131, 161], [256, 286], [303, 341], [377, 392], [437, 467], [501, 531], [585, 615], [660, 690], [738, 768], [780, 812], [1140, 1181], [1345, 1365], [1452, 1460], [1704, 1734], [1911, 1941], [2025, 2055], [2099, 2114], [2216, 2236], [2421, 2451], [2488, 2513], [2660, 2695], [2703, 2718], [2866, 2896]]\n"
+      "[[303, 341], [780, 812], [2660, 2695], [1140, 1181], [1452, 1460], [2421, 2451], [256, 286], [377, 392], [501, 531], [738, 768], [2488, 2513], [2866, 2896]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assigning dynamic FOI window\n",
+    "# for t in final_times:\n",
+    "#     foi_windows.append(findDynamicFOI2(t))\n",
+    "\n",
+    "# Assigning dynamic FOI window\n",
+    "for t in chosen_times:\n",
+    "    foi_windows.append(findDynamicFOI2(t))\n",
+    "\n",
+    "    \n",
+    "print foi_windows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[256, 286], [303, 341], [377, 392], [501, 531], [738, 768], [780, 812], [1140, 1181], [1452, 1460], [2421, 2451], [2488, 2513], [2660, 2695], [2866, 2896]]\n"
      ]
     }
    ],
@@ -788,19 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# final = concatenate([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)) for fw in foi_windows_sort])\n",
-    "# final.to_videofile(\"soccer-final95a.mp4\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -809,74 +857,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Program Files\\ImageMagick-6.9.4-Q16\\convert.exe\n",
-      "C:\\Users\\sukmawicaksana\\AppData\\Local\\imageio\\ffmpeg\\ffmpeg.win32.exe\n"
+      "[MoviePy] >>>> Building video soccer-final-short.mp4\n",
+      "[MoviePy] Writing audio in soccer-final-shortTEMP_MPY_wvf_snd.mp3\n",
+      "[MoviePy] Done.\n",
+      "[MoviePy] Writing video soccer-final-short.mp4\n",
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: soccer-final-short.mp4 \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Change setting imagemick for Windows user\n",
-    "import moviepy.config as cf\n",
-    "cf.change_settings({\"IMAGEMAGICK_BINARY\": \"C:\\Program Files\\ImageMagick-6.9.4-Q16\\convert.exe\"})\n",
-    "print( cf.get_setting(\"IMAGEMAGICK_BINARY\") )  # prints the current setting\n",
-    "print( cf.get_setting(\"FFMPEG_BINARY\") )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[MoviePy] This command returned an error !"
-     ]
-    },
-    {
-     "ename": "IOError",
-     "evalue": "MoviePy Error: creation of None failed because of the following error:\n\nconvert.exe: no images defined `PNG32:c:\\users\\sukmaw~1\\appdata\\local\\temp\\tmpvaykwv.png' @ error/convert.c/ConvertImageCommand/3257.\r\n.\n\n.This error can be due to the fact that ImageMagick is not installed on your computer, or (for Windows users) that you didn't specify the path to the ImageMagick binary in file conf.py, or.that the path you specified is incorrect",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-31-42a011d71427>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m                  .set_duration(10) )\n\u001b[0;32m      9\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m             txt_clip = ( TextClip(\"\",fontsize=70,color='white')\n\u001b[0m\u001b[0;32m     11\u001b[0m                  \u001b[1;33m.\u001b[0m\u001b[0mset_position\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'center'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m                  .set_duration(10) )\n",
-      "\u001b[1;32mc:\\users\\sukmawicaksana\\anaconda2\\envs\\cs4065\\lib\\site-packages\\moviepy-0.2.2.11-py2.7.egg\\moviepy\\video\\VideoClip.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, txt, filename, size, color, bg_color, fontsize, font, stroke_color, stroke_width, method, kerning, align, interline, tempfilename, temptxt, transparent, remove_temp, print_cmd)\u001b[0m\n\u001b[0;32m   1143\u001b[0m                     \u001b[1;34m\"path to the ImageMagick binary in file conf.py, or.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1144\u001b[0m                     \"that the path you specified is incorrect\" ))\n\u001b[1;32m-> 1145\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1146\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1147\u001b[0m         \u001b[0mImageClip\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtempfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtransparent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtransparent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIOError\u001b[0m: MoviePy Error: creation of None failed because of the following error:\n\nconvert.exe: no images defined `PNG32:c:\\users\\sukmaw~1\\appdata\\local\\temp\\tmpvaykwv.png' @ error/convert.c/ConvertImageCommand/3257.\r\n.\n\n.This error can be due to the fact that ImageMagick is not installed on your computer, or (for Windows users) that you didn't specify the path to the ImageMagick binary in file conf.py, or.that the path you specified is incorrect"
-     ]
-    }
-   ],
-   "source": [
-    "final2 = concatenate([clipfull.subclip( max(fw[0],0),min(fw[1], clipfull.duration) ) for fw in foi_windows_sort])\n",
-    "\n",
-    "for fw in foi_windows_sort:\n",
-    "    for pair in goals_pair: # [[303, 341], [780, 812], [2660, 2695]]\n",
-    "        if fw == pair :\n",
-    "            txt_clip = ( TextClip(goals_text[goals_pair.index(pair)],fontsize=70,color='white')\n",
-    "                 .set_position('center')\n",
-    "                 .set_duration(10) )\n",
-    "        else:\n",
-    "            txt_clip = ( TextClip(\"\",fontsize=70,color='white')\n",
-    "                 .set_position('center')\n",
-    "                 .set_duration(10) )\n",
-    "            \n",
-    "    final2 = concatenate(CompositeVideoClip([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)), txt_clip]))\n",
-    "    \n",
-    "final2.to_videofile(\"soccer-final95text.mp4\")"
+    "final = concatenate([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)) for fw in foi_windows_sort])\n",
+    "final.to_videofile(\"soccer-final-short.mp4\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Change setting imagemick for Windows user\n",
+    "# import moviepy.config as cf\n",
+    "# cf.change_settings({\"IMAGEMAGICK_BINARY\": \"C:\\Program Files\\ImageMagick-6.9.4-Q16\\convert.exe\"})\n",
+    "# print( cf.get_setting(\"IMAGEMAGICK_BINARY\") )  # prints the current setting\n",
+    "# print( cf.get_setting(\"FFMPEG_BINARY\") )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# final2 = concatenate([clipfull.subclip( max(fw[0],0),min(fw[1], clipfull.duration) ) for fw in foi_windows_sort])\n",
+    "\n",
+    "# for fw in foi_windows_sort:\n",
+    "#     for pair in goals_pair: # [[303, 341], [780, 812], [2660, 2695]]\n",
+    "#         if fw == pair :\n",
+    "#             txt_clip = ( TextClip(goals_text[goals_pair.index(pair)],fontsize=70,color='white')\n",
+    "#                  .set_position('center')\n",
+    "#                  .set_duration(10) )\n",
+    "#         else:\n",
+    "#             txt_clip = ( TextClip(\"\",fontsize=70,color='white')\n",
+    "#                  .set_position('center')\n",
+    "#                  .set_duration(10) )\n",
+    "            \n",
+    "#     final2 = concatenate(CompositeVideoClip([clipfull.subclip(max(fw[0],0),min(fw[1], clipfull.duration)), txt_clip]))\n",
+    "    \n",
+    "# final2.to_videofile(\"soccer-final95text.mp4\")"
+   ]
   }
  ],
  "metadata": {
